cabal-version: 2.2
name: primitive-atomic
version: 0.1.0.0
synopsis: Wrappers for primops around atomic operations
homepage: https://github.com/andrewthad/primitive-atomic
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Data.Primitive.Class.Atomic
    Data.Primitive.PrimArray.Atomic
  build-depends:
    , base >=4.11.1 && <5
    , primitive >= 0.6.4
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
